--- a/manifest.json
+++ b/manifest.json
@@ -9,17 +9,12 @@
   "private": false,
   "location": {
     "support": {
-      "ticket_sidebar": "assets/iframe.html"
+      "ticket_sidebar": "assets/iframe.html",
+      "modal": "assets/modal.html",
+      "background": "assets/iframe.html"
     }
   },
   "domainWhitelist": ["nlp.motherbot.co","jatana.motherbot.co","app.jatana.ai","zendesk.jatana.ai","nlp.jatana.ai"],
   "version": "1.5",
-  "frameworkVersion": "2.0",
-  "parameters": [
-    {
-      "name": "token",
-      "type": "text",
-      "secure": true
-    }
-  ]
+  "frameworkVersion": "1.4"
 }
