--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,14 @@
     "url": "http://help.jatana.ai/"
   },
   "defaultLocale": "en",
+  "gaID": "UA-110182441-1",
   "private": false,
   "location": {
     "support": {
+      "background": "assets/background.html",
       "ticket_sidebar": "assets/iframe.html",
-      "modal": "assets/modal.html",
-      "background": "assets/background.html"
+      "modal": "assets/modal.html"
+
     }
   },
   "domainWhitelist": ["app.jatana.ai","zendesk.jatana.ai","nlp.jatana.ai"],
