--- a/manifest.json
+++ b/manifest.json
@@ -6,15 +6,17 @@
     "url": "http://help.jatana.ai/"
   },
   "defaultLocale": "en",
+  "gaID": "UA-110182441-1",
   "private": false,
   "location": {
     "support": {
+      "background": "assets/background.html",
       "ticket_sidebar": "assets/iframe.html",
-      "modal": "assets/modal.html",
-      "background": "assets/background.html"
+      "modal": "assets/modal.html"
+
     }
   },
   "domainWhitelist": ["app.jatana.ai","zendesk.jatana.ai","nlp.jatana.ai"],
-  "version": "1.6",
+  "version": "1.6.1",
   "frameworkVersion": "2.0"
 }
